upload går fram

--- a/upload.html
+++ b/upload.html
@@ -12,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
     
 
 </head>
@@ -80,28 +81,30 @@
       <h1>Enter details</h1>
 
       <h4>Title</h4> 
-      <input id="enterID" type="text"> 
+      <input id="enterTitle" type="text"> 
 
       <h4>Url</h4> 
-      <h1 id="enterName">
+      <h1 id="enterUrl">
       
       </h1> 
 
       <h4>Author</h4> 
-      <input id="enterAge" type="text"> <br><br>
+      <input id="enterAuthor" type="text"> <br><br>
 
       <button id="insert">INSERT</button>
       <button id="update">UPDATE</button>
-      <button id="remove">REMOVE</button> <br><br>
+      <button id="remove">REMOVE</button>
+      <button onClick="window.location.reload();">Clear</button>
+      <br><br>
   </div>
 
   <div id="findDetails">
       <h1>Find by ID</h1>
       <h4>ID</h4>
-      <input id="findID" type="text"> <br><br>
+      <input id="findTitle" type="text"> <br><br>
       <button id="find">FIND</button>
-      <h3 id="findName" type="text"></h3>
-      <h3 id="findAge" type="number"></h3> <br><br>
+      <div id="findUrl"></div>
+      <h3 id="findAuthor" type="text"></h3> <br><br>
   </div>
 
     <script type="module" src="index.js"></script>
