--- a/upload.html
+++ b/upload.html
@@ -59,9 +59,9 @@
       </video>
    
     </div>
-    <h4>Title</h4> 
+    <h4 style="color: white;">Title</h4> 
     <input id="enterTitle" type="text"> 
-    <h4>Author</h4> 
+    <h4 style="color: white;">Author</h4> 
     <input id="enterAuthor" type="text"> <br><br>
     
   </div>
